Updates test pipeline

--- a/test/notebooks/test_pipeline.ipynb
+++ b/test/notebooks/test_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "095849df-8d54-43d5-a9be-c6f84f0fbd8b",
    "metadata": {
     "tags": []
@@ -13,22 +13,7 @@
     "import os\n",
     "\n",
     "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '..', '..')))\n",
-    "import prometheux_chain as pmtx"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "823631cf-0d4c-4440-929a-9e4565697133",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import os\n",
+    "import prometheux_chain as pmtx\n",
     "\n",
     "PMTX_TOKEN = \"dev-token\"\n",
     "os.environ[\"PMTX_TOKEN\"] = PMTX_TOKEN"
@@ -44,39 +29,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "aebefc0a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "All user's projects deleted successfully\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pmtx.cleanup_projects()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "4ab1ca82",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'203d8aec650'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "project_id = pmtx.save_project(project_name=\"test_project\")\n",
     "project_id"
@@ -84,54 +50,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "77530416",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'id': '203d8aec650',\n",
-       "  'name': 'test_project',\n",
-       "  'author': 'devuser',\n",
-       "  'scope': 'user',\n",
-       "  'to_persist': True,\n",
-       "  'created_at': '2025-08-14T16:44:37.181247+00:00',\n",
-       "  'updated_at': '2025-08-14T16:44:37.181247+00:00'}]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pmtx.list_projects()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ab28a457",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'id': '203d8aec650',\n",
-       " 'name': 'test_project',\n",
-       " 'author': 'devuser',\n",
-       " 'scope': 'user',\n",
-       " 'to_persist': True,\n",
-       " 'created_at': '2025-08-14T16:44:37.181247+00:00',\n",
-       " 'updated_at': '2025-08-14T16:44:37.181247+00:00'}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "project = pmtx.load_project(project_id=project_id)\n",
     "project"
@@ -147,48 +79,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "7a40b961",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "All data sources for workspace workspace_id deleted successfully\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pmtx.cleanup_sources()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "7331be80",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'connectionStatus': True,\n",
-       " 'sources': [{'id': '8daab3d610af52f0b3c2b30710311724',\n",
-       "   'bind_annotation': '@bind(\"ownership_csv\",\"csv useHeaders=\\'true\\'\",\"/Users/teodorobaldazzi/Documents/workdir/prometheux/prometheux_chain/test/notebooks/../resources/ownership\",\"ownership.csv\").',\n",
-       "   'model_annotation': '@model(\"ownership_csv\", \"Owner:string,Company:string,Share:double\", \"\").',\n",
-       "   'rule_block': '',\n",
-       "   'row_count': 0,\n",
-       "   'column_count': 3,\n",
-       "   'author': 'devuser',\n",
-       "   'timestamp': '2025-08-14T16:44:37.560456+00:00'}],\n",
-       " 'errorMessage': None}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "db = pmtx.data.database.Database(\n",
     "    database_type=\"csv\",\n",
@@ -204,28 +108,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "fcf82eb9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'id': '8daab3d610af52f0b3c2b30710311724',\n",
-       "  'bind_annotation': '@bind(\"ownership_csv\",\"csv useHeaders=\\'true\\'\",\"/Users/teodorobaldazzi/Documents/workdir/prometheux/prometheux_chain/test/notebooks/../resources/ownership\",\"ownership.csv\").',\n",
-       "  'model_annotation': '@model(\"ownership_csv\", \"Owner:string,Company:string,Share:double\", \"\").',\n",
-       "  'rule_block': '',\n",
-       "  'row_count': 0,\n",
-       "  'column_count': 3,\n",
-       "  'author': 'devuser',\n",
-       "  'timestamp': '2025-08-14T16:44:37.560456+00:00'}]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pmtx.list_sources()"
    ]
@@ -240,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "d6a8525c",
    "metadata": {},
    "outputs": [],
@@ -250,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "ba511a95",
    "metadata": {},
    "outputs": [],
@@ -260,19 +146,28 @@
     "@output(\"ownership\").\n",
     "\"\"\"\n",
     "\n",
-    "pmtx.save_concept(project_id=project_id, concept_logic=concept_logic)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "7ea2d2d6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "pmtx.save_concept(project_id=project_id, concept_logic=concept_logic)\n",
+    "\n",
     "concept_logic = \"\"\"\n",
     "owner(Owner) :- ownership(Owner,Company,Shares).\n",
     "@output(\"owner\").\n",
+    "\"\"\"\n",
+    "\n",
+    "pmtx.save_concept(project_id=project_id, concept_logic=concept_logic)\n",
+    "\n",
+    "concept_logic = \"\"\"\n",
+    "company(\"Apple\", \"Redwood City, CA\").\n",
+    "company(\"Google\", \"Mountain View, CA\").\n",
+    "company(\"Microsoft\", \"Redmond, WA\").\n",
+    "company(\"Amazon\", \"Seattle, WA\").\n",
+    "company(\"Facebook\", \"Menlo Park, CA\").\n",
+    "company(\"Twitter\", \"San Francisco, CA\").\n",
+    "company(\"LinkedIn\", \"Sunnyvale, CA\").\n",
+    "company(\"Instagram\", \"Menlo Park, CA\").\n",
+    "\n",
+    "location(Location) :- company(_,Location).\n",
+    "\n",
+    "@output(\"location\").\n",
     "\"\"\"\n",
     "\n",
     "pmtx.save_concept(project_id=project_id, concept_logic=concept_logic)"
@@ -280,74 +175,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "457d43ba",
+   "execution_count": null,
+   "id": "7ea2d2d6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'message': \"Successfully ran concept 'ownership'\",\n",
-       " 'concept_name': 'ownership',\n",
-       " 'predicates_populated': [],\n",
-       " 'total_records': 0,\n",
-       " 'evaluation_results': {'id': 33,\n",
-       "  'resultSet': {},\n",
-       "  'types': {'ownership': ['STRING', 'STRING', 'DOUBLE']},\n",
-       "  'columnNames': {'ownership': ['Owner', 'Company', 'Shares']}}}"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pmtx.run_concept(project_id=project_id, concept_name=\"ownership\", persist_outputs=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "id": "457d43ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pmtx.run_concept(project_id=project_id, concept_name=\"location\", persist_outputs=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "af4b985b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'predicate_name': 'owner',\n",
-       "  'fields': {'Owner': 'unknown'},\n",
-       "  'column_count': 1,\n",
-       "  'is_input': False,\n",
-       "  'row_count': 0,\n",
-       "  'type': 'api',\n",
-       "  'timestamp': '2025-08-14T16:44:37.850103+00:00',\n",
-       "  'author': 'devuser'},\n",
-       " {'predicate_name': 'ownership',\n",
-       "  'fields': {'Owner': 'string', 'Company': 'string', 'Shares': 'double'},\n",
-       "  'column_count': 3,\n",
-       "  'is_input': False,\n",
-       "  'row_count': 0,\n",
-       "  'type': 'app',\n",
-       "  'timestamp': '2025-08-14T16:44:38.364037+00:00',\n",
-       "  'author': 'devuser'},\n",
-       " {'predicate_name': 'ownership_csv',\n",
-       "  'fields': {'Owner': 'string', 'Company': 'string', 'Share': 'double'},\n",
-       "  'column_count': 3,\n",
-       "  'is_input': True,\n",
-       "  'row_count': 0,\n",
-       "  'type': 'csv',\n",
-       "  'timestamp': '2025-08-14T16:44:37.560456+00:00',\n",
-       "  'author': 'devuser'}]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pmtx.list_concepts(project_id=project_id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55eb4771",
+   "metadata": {},
+   "source": [
+    "##### KG functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9a7aea9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pmtx.save_kg(project_id=project_id, concepts=[\"owner\", \"location\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05eb68eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pmtx.load_kg(project_id=project_id)"
    ]
   },
   {
@@ -360,24 +241,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "c657d76e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'owner(Owner)': [['Acme Inc'],\n",
-       "  ['John Doe'],\n",
-       "  ['Umbrella Corp'],\n",
-       "  ['Daniel Black']]}"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "graph_rag_result = pmtx.graph_rag(project_id=project_id,\n",
     "                                  question=\"This is the question\", \n",
