--- a/test/notebooks/test_pipeline.ipynb
+++ b/test/notebooks/test_pipeline.ipynb
@@ -117,6 +117,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fa69de7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pmtx.infer_schema(database=db, add_bind=True, add_model=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2722c6c0",
    "metadata": {},
