Updated test pipeline

--- a/test/notebooks/test_pipeline.ipynb
+++ b/test/notebooks/test_pipeline.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pmtx.cleanup_projects()"
+    "#pmtx.cleanup_projects()"
    ]
   },
   {
@@ -84,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pmtx.cleanup_sources()"
+    "#pmtx.cleanup_sources()"
    ]
   },
   {
@@ -141,7 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pmtx.cleanup_concepts(project_id=project_id)"
+    "#pmtx.cleanup_concepts(project_id=project_id)"
    ]
   },
   {
@@ -259,7 +259,7 @@
     "graph_rag_result = pmtx.graph_rag(project_id=project_id,\n",
     "                                  question=\"This is the question\", \n",
     "                                  rag_concepts=[{\"concept\": \"ownership\", \"field_to_embed\": \"Owner\"}],\n",
-    "                                  graph_concepts=[\"owner\"])\n",
+    "                                  graph_selected_concepts=[\"owner\"])\n",
     "\n",
     "graph_rag_result['graph_rag_results']"
    ]
