Updated test + added management for unauthorized exception

--- a/test/notebooks/test_pipeline.ipynb
+++ b/test/notebooks/test_pipeline.ipynb
@@ -13,10 +13,10 @@
     "import os\n",
     "\n",
     "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '..', '..')))\n",
-    "import prometheux_chain as pmtx\n",
+    "import prometheux_chain as px\n",
     "\n",
-    "PMTX_TOKEN = \"dev-token\"\n",
-    "os.environ[\"PMTX_TOKEN\"] = PMTX_TOKEN"
+    "px_TOKEN = \"dev-token\"\n",
+    "os.environ[\"px_TOKEN\"] = px_TOKEN"
    ]
   },
   {
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pmtx.cleanup_projects()"
+    "#px.cleanup_projects()"
    ]
   },
   {
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "project_id = pmtx.save_project(project_name=\"test_project\")\n",
+    "project_id = px.save_project(project_name=\"test_project\")\n",
     "project_id"
    ]
   },
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pmtx.list_projects()"
+    "px.list_projects()"
    ]
   },
   {
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "project = pmtx.load_project(project_id=project_id)\n",
+    "project = px.load_project(project_id=project_id)\n",
     "project"
    ]
   },
@@ -84,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pmtx.cleanup_sources()"
+    "#px.cleanup_sources()"
    ]
   },
   {
@@ -94,7 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = pmtx.data.database.Database(\n",
+    "db = px.data.database.Database(\n",
     "    database_type=\"csv\",\n",
     "    username=\"\",\n",
     "    password=\"\",\n",
@@ -103,7 +103,7 @@
     "    database_name=\"ownership.csv\",\n",
     "    options={} #{\"delimiter\": \"\\t\"}\n",
     ")\n",
-    "pmtx.connect_sources(database_payload=db)"
+    "px.connect_sources(database_payload=db)"
    ]
   },
   {
@@ -113,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pmtx.list_sources()"
+    "px.list_sources()"
    ]
   },
   {
@@ -123,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pmtx.infer_schema(database=db, add_bind=True, add_model=False)"
+    "px.infer_schema(database=db, add_bind=True, add_model=False)"
    ]
   },
   {
@@ -141,7 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pmtx.cleanup_concepts(project_id=project_id)"
+    "#px.cleanup_concepts(project_id=project_id)"
    ]
   },
   {
@@ -156,14 +156,14 @@
     "@output(\"ownership\").\n",
     "\"\"\"\n",
     "\n",
-    "pmtx.save_concept(project_id=project_id, concept_logic=concept_logic)\n",
+    "px.save_concept(project_id=project_id, concept_logic=concept_logic)\n",
     "\n",
     "concept_logic = \"\"\"\n",
     "owner(Owner) :- ownership(Owner,Company,Shares).\n",
     "@output(\"owner\").\n",
     "\"\"\"\n",
     "\n",
-    "pmtx.save_concept(project_id=project_id, concept_logic=concept_logic)\n",
+    "px.save_concept(project_id=project_id, concept_logic=concept_logic)\n",
     "\n",
     "concept_logic = \"\"\"\n",
     "company(\"Apple\", \"Redwood City, CA\").\n",
@@ -180,7 +180,7 @@
     "@output(\"location\").\n",
     "\"\"\"\n",
     "\n",
-    "pmtx.save_concept(project_id=project_id, concept_logic=concept_logic)"
+    "px.save_concept(project_id=project_id, concept_logic=concept_logic)"
    ]
   },
   {
@@ -190,7 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pmtx.run_concept(project_id=project_id, concept_name=\"ownership\", persist_outputs=True)"
+    "px.run_concept(project_id=project_id, concept_name=\"ownership\", persist_outputs=True)"
    ]
   },
   {
@@ -200,7 +200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pmtx.run_concept(project_id=project_id, concept_name=\"location\", persist_outputs=False)"
+    "px.run_concept(project_id=project_id, concept_name=\"location\", persist_outputs=False)"
    ]
   },
   {
@@ -210,7 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pmtx.list_concepts(project_id=project_id)"
+    "px.list_concepts(project_id=project_id)"
    ]
   },
   {
@@ -228,7 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pmtx.save_kg(project_id=project_id, concepts=[\"owner\", \"location\"])"
+    "px.save_kg(project_id=project_id, concepts=[\"owner\", \"location\"])"
    ]
   },
   {
@@ -238,7 +238,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pmtx.load_kg(project_id=project_id)"
+    "px.load_kg(project_id=project_id)"
    ]
   },
   {
@@ -256,13 +256,88 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "graph_rag_result = pmtx.graph_rag(project_id=project_id,\n",
+    "graph_rag_result = px.graph_rag(project_id=project_id,\n",
     "                                  question=\"This is the question\", \n",
     "                                  rag_concepts=[{\"concept\": \"ownership\", \"field_to_embed\": \"Owner\"}],\n",
     "                                  graph_selected_concepts=[\"owner\"])\n",
     "\n",
     "graph_rag_result['graph_rag_results']"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3968f010",
+   "metadata": {},
+   "source": [
+    "#### Run python script"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9bee0624",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "python_script = \"\"\"\n",
+    "import json\n",
+    "\n",
+    "# Simple calculations\n",
+    "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "\n",
+    "# Calculate basic statistics\n",
+    "total = sum(numbers)\n",
+    "average = total / len(numbers)\n",
+    "maximum = max(numbers)\n",
+    "minimum = min(numbers)\n",
+    "\n",
+    "# Create results\n",
+    "results = {\n",
+    "    \"numbers\": numbers,\n",
+    "    \"total\": total,\n",
+    "    \"average\": round(average, 2),\n",
+    "    \"maximum\": maximum,\n",
+    "    \"minimum\": minimum,\n",
+    "    \"count\": len(numbers)\n",
+    "}\n",
+    "\n",
+    "# Output as JSON\n",
+    "print(json.dumps(results))\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0b5141d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "px.save_concept(project_id=project_id, \n",
+    "                concept_logic=\"@output(\\\"test_python\\\").\\ntest_python(Result) :- Result = python:run(\\\"python_script\\\").\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c977251b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "px.run_concept(project_id=project_id, \n",
+    "                 concept_name=\"test_python\", \n",
+    "                 python_scripts={\n",
+    "                     \"python_script\": python_script\n",
+    "                 })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "272b74c2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
