Python scripts can be injected when saving and running concepts

--- a/test/notebooks/test_pipeline.ipynb
+++ b/test/notebooks/test_pipeline.ipynb
@@ -282,27 +282,29 @@
     "python_script = \"\"\"\n",
     "import json\n",
     "\n",
-    "# Simple calculations\n",
-    "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
-    "\n",
-    "# Calculate basic statistics\n",
-    "total = sum(numbers)\n",
-    "average = total / len(numbers)\n",
-    "maximum = max(numbers)\n",
-    "minimum = min(numbers)\n",
-    "\n",
-    "# Create results\n",
-    "results = {\n",
-    "    \"numbers\": numbers,\n",
-    "    \"total\": total,\n",
-    "    \"average\": round(average, 2),\n",
-    "    \"maximum\": maximum,\n",
-    "    \"minimum\": minimum,\n",
-    "    \"count\": len(numbers)\n",
-    "}\n",
-    "\n",
-    "# Output as JSON\n",
-    "print(json.dumps(results))\n",
+    "def main():\n",
+    "    # Simple calculations\n",
+    "    numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "    \n",
+    "    # Calculate basic statistics\n",
+    "    total = sum(numbers)\n",
+    "    average = total / len(numbers)\n",
+    "    maximum = max(numbers)\n",
+    "    minimum = min(numbers)\n",
+    "    \n",
+    "    # Create results as a list of dictionaries (tabular format)\n",
+    "    results = [\n",
+    "        {\n",
+    "            \"Numbers\": numbers,\n",
+    "            \"Total\": total,\n",
+    "            \"Average\": round(average, 2),\n",
+    "            \"Maximum\": maximum,\n",
+    "            \"Minimum\": minimum,\n",
+    "            \"Count\": len(numbers)\n",
+    "        }\n",
+    "    ]\n",
+    "    \n",
+    "    return results\n",
     "\"\"\""
    ]
   },
@@ -314,7 +316,10 @@
    "outputs": [],
    "source": [
     "px.save_concept(project_id=project_id, \n",
-    "                concept_logic=\"@output(\\\"test_python\\\").\\ntest_python(Result) :- Result = python:run(\\\"python_script\\\").\")"
+    "                concept_logic=\"@output(\\\"test_python\\\").\\ntest_python(Numbers,Total,Average,Maximum,Minimum,Count) :- python:run(\\\"python_script\\\").\",\n",
+    "                python_scripts={\n",
+    "                     \"python_script\": python_script\n",
+    "                 })"
    ]
   },
   {
@@ -325,10 +330,7 @@
    "outputs": [],
    "source": [
     "px.run_concept(project_id=project_id, \n",
-    "                 concept_name=\"test_python\", \n",
-    "                 python_scripts={\n",
-    "                     \"python_script\": python_script\n",
-    "                 })"
+    "                 concept_name=\"test_python\")"
    ]
   },
   {
