Integrated function to copy project

--- a/test/notebooks/test_pipeline.ipynb
+++ b/test/notebooks/test_pipeline.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#px.cleanup_projects()"
+    "px.cleanup_projects()"
    ]
   },
   {
@@ -206,6 +206,51 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b3fcd76f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "python_script = \"\"\"\n",
+    "import json\n",
+    "\n",
+    "def main():\n",
+    "    # Simple calculations\n",
+    "    numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "    \n",
+    "    # Calculate basic statistics\n",
+    "    total = sum(numbers)\n",
+    "    average = total / len(numbers)\n",
+    "    maximum = max(numbers)\n",
+    "    minimum = min(numbers)\n",
+    "    \n",
+    "    # Create results as a list of dictionaries (tabular format)\n",
+    "    results = [\n",
+    "        {\n",
+    "            \"Numbers\": numbers,\n",
+    "            \"Total\": total,\n",
+    "            \"Average\": round(average, 2),\n",
+    "            \"Maximum\": maximum,\n",
+    "            \"Minimum\": minimum,\n",
+    "            \"Count\": len(numbers)\n",
+    "        }\n",
+    "    ]\n",
+    "    \n",
+    "    return results\n",
+    "\"\"\"\n",
+    "\n",
+    "px.save_concept(project_id=project_id, \n",
+    "                concept_logic=\"@output(\\\"test_python\\\").\\ntest_python(Numbers,Total,Average,Maximum,Minimum,Count) :- python:run(\\\"python_script\\\").\",\n",
+    "                python_scripts={\n",
+    "                     \"python_script\": python_script\n",
+    "                 })\n",
+    "\n",
+    "px.run_concept(project_id=project_id, \n",
+    "                 concept_name=\"test_python\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "af4b985b",
    "metadata": {},
    "outputs": [],
@@ -243,6 +288,34 @@
   },
   {
    "cell_type": "markdown",
+   "id": "20424efe",
+   "metadata": {},
+   "source": [
+    "#### Copy project function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08b2cb2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "px.copy_project(project_id=project_id, workspace_id=\"workspace_id\", new_project_name=\"copied_project\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa975731",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "px.list_projects()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6030da6c",
    "metadata": {},
    "source": [
@@ -263,83 +336,6 @@
     "\n",
     "graph_rag_result['graph_rag_results']"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3968f010",
-   "metadata": {},
-   "source": [
-    "#### Run python script"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9bee0624",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "python_script = \"\"\"\n",
-    "import json\n",
-    "\n",
-    "def main():\n",
-    "    # Simple calculations\n",
-    "    numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
-    "    \n",
-    "    # Calculate basic statistics\n",
-    "    total = sum(numbers)\n",
-    "    average = total / len(numbers)\n",
-    "    maximum = max(numbers)\n",
-    "    minimum = min(numbers)\n",
-    "    \n",
-    "    # Create results as a list of dictionaries (tabular format)\n",
-    "    results = [\n",
-    "        {\n",
-    "            \"Numbers\": numbers,\n",
-    "            \"Total\": total,\n",
-    "            \"Average\": round(average, 2),\n",
-    "            \"Maximum\": maximum,\n",
-    "            \"Minimum\": minimum,\n",
-    "            \"Count\": len(numbers)\n",
-    "        }\n",
-    "    ]\n",
-    "    \n",
-    "    return results\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b0b5141d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "px.save_concept(project_id=project_id, \n",
-    "                concept_logic=\"@output(\\\"test_python\\\").\\ntest_python(Numbers,Total,Average,Maximum,Minimum,Count) :- python:run(\\\"python_script\\\").\",\n",
-    "                python_scripts={\n",
-    "                     \"python_script\": python_script\n",
-    "                 })"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c977251b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "px.run_concept(project_id=project_id, \n",
-    "                 concept_name=\"test_python\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "272b74c2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
