Added functions to import and export workspace

--- a/test/notebooks/test_pipeline.ipynb
+++ b/test/notebooks/test_pipeline.ipynb
@@ -291,7 +291,7 @@
    "id": "20424efe",
    "metadata": {},
    "source": [
-    "#### Copy project function"
+    "#### Copy, export, import projects functions"
    ]
   },
   {
@@ -311,7 +311,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "px.list_projects()"
+    "exported_workspace = px.export_workspace()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6f0b1be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "px.import_workspace(exported_workspace)"
    ]
   },
   {
