Save and load user configs

--- a/test/notebooks/test_pipeline.ipynb
+++ b/test/notebooks/test_pipeline.ipynb
@@ -71,6 +71,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e7959f0a",
+   "metadata": {},
+   "source": [
+    "#### Config functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f432ccd9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "px.load_user_config()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b2b345e0",
    "metadata": {},
    "source": [
@@ -84,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#px.cleanup_sources()"
+    "px.cleanup_sources()"
    ]
   },
   {
@@ -141,7 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#px.cleanup_concepts(project_id=project_id)"
+    "px.cleanup_concepts(project_id=project_id)"
    ]
   },
   {
@@ -311,7 +329,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exported_workspace = px.export_workspace()"
+    "exported_workspace = px.export_workspace()\n",
+    "exported_workspace"
    ]
   },
   {
@@ -346,6 +365,14 @@
     "\n",
     "graph_rag_result['graph_rag_results']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a170a00",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
